# LAPA-Lora-Jax

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: base.yaml  libero90_lora_v2.yaml  libero90_rslora_optionB.yaml  libero90_rslora_optionB_runpod.yaml  libero90_rslora_r128.yaml  libero90_rslora_r128_runpod.yaml
docker/: Dockerfile
docs/: RECIPE.md  TROUBLESHOOTING.md
scripts/: entrypoint.sh  launch.py  monitor.sh  monitor_native.sh  preprocess_libero_to_jsonl.py  run_docker.sh  run_native.sh  runpod_setup.sh  setup.sh
src/latent_pretraining/: delta_llama.py  delta_llama_action.py  llama.py  llama_action.py  sampler_latent_action_pretrain.py  train.py  vision_llama.py
