[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lapa-lora-jax"
version = "0.2.0"
description = "Standalone, dockerized JAX/Flax LoRA fine-tuning for LAPA-7B (LIBERO-90 stage-3)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "LAPA training maintainers" }]

# Real deps are pinned in requirements.txt (JAX has GPU-specific find-links).
dependencies = ["pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["latent_pretraining*"]
